Revision history for DBIx::Class

    * New Features / Changes
        - Revert to passing the original (pre-0.08240) arguments to
          inflate_result() and remove the warning about ResultClass
          inheritance.
        - Optimize the generated rowparsers even more - no user-visible
          changes.

0.08240-TRIAL (EXPERIMENTAL BETA RELEASE) 2013-02-14 05:56 (UTC)
    * New Features / Changes
        - Rewrite from scratch the result constructor codepath - many bugfixes
          and performance improvements (the current codebase is now capable of
          outperforming both DBIx::DataModel and Rose::DB::Object on some
          workloads). Some notable benefits:
          - Multiple has_many prefetch
          - Partial prefetch - you now can select only columns you are
            interested in, while preserving the collapse functionality
            (collapse is now exposed as a first-class API attribute)
          - Prefetch of resultsets with arbitrary order
            (RT#54949, RT#74024, RT#74584)
          - Prefetch no longer inserts right-side table order_by clauses
            (massively helps the deficient MySQL optimizer)
        - Massively optimize codepath around ->cursor(), over 10x speedup
          on some iterating workloads.

    * Fixes
        - Fix open cursors silently resetting when inherited across a fork
          or a thread
        - Fix duplicated selected columns when calling 'count' when a same
          aggregate function is used more than once in a 'having' clause
          (RT#83305)

    * Misc
        - Fixup our distbuilding process to stop creating world-writable
          tarball contents (implicitly fixes RT#83084)
        - Added strict and warnings tests for all lib and test files

0.08206 2013-02-08
    * Fixes
        - Fix dbh_do() failing to properly reconnect (regression in 0.08205)
        - Extra sanity check of a fresh DBI handle ($dbh). Fixes